force-app/main/default/objects/Contact/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <description>RUBX-3907 : Refers city of address record selected as Bill-To</description>
    <formula>Bill_To__r.City__c</formula>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>