force-app/main/default/objects/Contact/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <description>RUBX-3907 : Refers country of address record selected as Bill-To</description>
    <formula>Text(Bill_To__r.Country__c)</formula>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>