force-app/main/default/objects/Contact/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <description>RUBX-3907 : Refers state/province of address record selected as Bill-To</description>
    <formula>Bill_To__r.State_Province__c</formula>
    <label>Billing State/Province</label>
    <type>Text</type>
</CustomField>