force-app/main/default/objects/Contact/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <description>RUBX-3907 : Refers street of address record selected as Bill-To</description>
    <formula>Bill_To__r.Street_Name__c</formula>
    <label>Billing Street</label>
    <type>Text</type>
</CustomField>