force-app/main/default/objects/Contact/fields/contactid_18__c.field-meta.xml
<CustomField>
        <fullName>contactid_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>contactid(18)</label>
        <type>Text</type>
    </CustomField>