force-app/main/default/objects/Contact/fields/Primary_Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Primary_Job_Function__c</fullName>
    <description>RUBX-513 : This field captures Primary Job Function of a Contact</description>
    <label>Primary Job Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PrimaryJobFunction</valueSetName>
    </valueSet>
</CustomField>