force-app/main/default/objects/Contact/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>RUBX-1672 : Lookup to capture Shipping Address for Contact</description>
    <inlineHelpText>Use this field to capture Billing Address(must be associated with Contact or its Account)</inlineHelpText>
    <label>Ship-To</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Please select an address record associated with the Contact&#39;s Account</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Address__c.Account__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Address__c.Contact__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Contacts (Ship-To)</relationshipLabel>
    <relationshipName>Shipping_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>