force-app/main/default/objects/Contact/fields/Shipping_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip_Postal_Code__c</fullName>
    <description>RUBX-3907 : Refers Zip/Postal Code of address record selected as Ship-To</description>
    <formula>Ship_To__r.Zip_Postal_Code__c</formula>
    <label>Shipping Zip/Postal Code</label>
    <type>Text</type>
</CustomField>