force-app/main/default/objects/Contact/recordTypes/FinastraContact.recordType-meta.xml
<RecordType>
    <fullName>FinastraContact</fullName>
    <active>true</active>
    <description>Finastra Contact</description>
    <label>Finastra Contact</label>
</RecordType>