force-app/main/default/objects/Contact/validationRules/Cannot_Blank_Out_FirstName.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Blank_Out_FirstName</fullName>
    <active>true</active>
    <description>RUBX-1416:Rule For FirstName Mandatory Check</description>
    <errorConditionFormula>NOT($Setup.Bypass_Validations__c.Disable__c) &amp;&amp; ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Contact First Name is Mandatory.</errorMessage>
</ValidationRule>